--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: python
+
 python:
  - "3.4"
  - "3.5"
  - "3.6"
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-6
+      - g++-6
+
+env: CC=gcc-6 CXX=g++-6
 
 install:
  - pip install -e .[dev]
