--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gcc-6
-      - g++-6
+      - gcc-7
+      - g++-7
 
-env: CC=gcc-6 CXX=g++-6
+env: CC=gcc-7 CXX=g++-7
 
 install:
  - pip install -e .[dev]
@@ -23,3 +23,6 @@ before_script:
 
 script:
  - py.test gotenks
+
+notifications:
+  email: false
